[package]
name = "nydus-api"
version = "0.1.0"
authors = ["The Nydus Developers"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
micro_http = { git = "https://github.com/openanolis/dbs-uhttp", rev = "52e7ffe994134c231ad9fe1cc88c68b0cdda2278" }
serde = { version = ">=1.0.27", features = ["rc"] }
serde_derive = ">=1.0.27"
serde_json = ">=1.0.9"
vmm-sys-util = ">=0.9.0"
url = "2.1.1"
http = "0.2.1"
nydus-utils = { path = "../utils" }
mio = { version = "0.8.0", features = ["os-poll", "os-ext"]}
