[package]
name = "storage"
version = "0.5.0"
authors = ["The Nydus Developers"]
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
anyhow = "1.0.35"
# pin arc-swap because 1.x version of ArcSwapAny does not implement Clone
arc-swap = "=0.4"
base64 = { version = ">=0.12.0", optional = true }
bitflags = ">=1.1.0"
flate2 = { version = "1.0", features = ["miniz-sys"], default-features = false }
futures = "0.3"
governor = "0.4"
hmac = { version = "0.8.1", optional = true }
httpdate = { version = "1.0", optional = true }
lazy_static = "1.4.0"
libc = "0.2"
log = "0.4.8"
lz4-sys = "1.9.2"
nix = ">=0.23.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"], optional = true }
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
serde_with = { version = "1.6.0", features = ["macros"] }
sha2 = { version = "0.9.1", optional = true }
sha-1 = { version = "0.9.1", optional = true }
spmc = "0.3.0"
tokio = { version = ">=1.13.1", features = ["rt-multi-thread"] }
url = { version = "2.1.1", optional = true }
vm-memory = "0.7.0"
vmm-sys-util = ">=0.9.0"
fuse-backend-rs = { git = "https://github.com/cloud-hypervisor/fuse-backend-rs", rev = "765d987642dfea1a5c25691a506b657827320cad" }

nydus-utils = { path = "../utils" }
nydus-error = { path = "../error" }

micro_http = { git = "https://github.com/openanolis/dbs-uhttp", rev = "52e7ffe994134c231ad9fe1cc88c68b0cdda2278" }

[dev-dependencies]

[features]
backend-localfs = ["sha2"]
backend-oss = ["base64", "httpdate", "reqwest", "sha-1", "sha2", "hmac", "url"]
backend-registry = ["base64", "reqwest", "sha2", "url"]
