[package]
name = "nydus-utils"
version = "0.1.0"
description = "Utilities for Nydus and Rafs"
authors = ["The Nydus Developers"]
repository = "https://github.com/dragonflyoss/image-service"
edition = "2018"
license = "Apache-2.0 OR BSD-3-Clause"

[dependencies]
log = "0.4"
lazy_static = "1.4"
libc = "0.2"
sha2 = "0.9.1"
blake3 = "1.0"
serde = { version = ">=1.0.27", features = ["serde_derive", "rc"] }
serde_json = ">=1.0.9"
fuse-backend-rs = { git = "https://github.com/cloud-hypervisor/fuse-backend-rs", rev = "765d987642dfea1a5c25691a506b657827320cad" }

nydus-error = { version = "0.2", path = "../error" }

[features]
fusedev = ["fuse-backend-rs/fusedev"]
